# OpiumwareAtlantisv4

./: README2.MD  error.txt  extract.cjs  extract.js  package-lock.json  package.json  script1.cjs  script2.cjs  script3.cjs  scripts.js  syntax_error.txt  vite.config.ts
.github/workflows/: atlantis_build.yml
src/: Cargo.toml  index.html  main.rs  scripts.js  styles.css
src-tauri/: Cargo.toml  err.txt  output.txt  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/SELWIARE/tauri.localhost/_next/static/chunks/pages/: _app-9b5623f76cc4f66e.js
