[package]
name = "dash"
version = "0.1.0"
description = "A code executor with Monaco Editor"
authors = ["You"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "2.0.0-alpha.16", features = [] }

[dependencies]
byteorder = "1.5"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "^2.0.0-alpha.16", features = [] }
tauri-plugin-shell = { version = "2.0.0-alpha.5" }
tauri-plugin-dialog = { version = "2.0.0-alpha.3" }
tauri-plugin-fs = { version = "2.0.0-alpha.5" }
tauri-plugin-clipboard-manager = { version = "2.0.0-alpha.3" }
base64 = "0.21"
once_cell = "1.19.0"
dirs = "6.0.0"
sysinfo = "0.30"
flate2 = "1.0"
open = "5.0"
[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
